# restaurant_RAG_new

./: .coverage  .dockerignore  .env.example  .gitignore  123.py  456.py  Dockerfile  Dockerfile.dev  README.md  app.py  deploy.Dockerfile  docker-compose.yml  embedded_faq_preview.json  line_bot_main.py  linebot_webhook_handler.py  pyproject.toml  requirements.txt
.github/workflow/: deploy.yaml  deploy.yml  workflows.yml
.github/workflows/: CI.yml  deploy.yaml
RAG/: RAG_main.py  README.md  add_missing_init.py  compare.py  dev_runner.py  embedding.py  query_engine_safe.py  toolsupload_and_test.py  upload.py  vector_DB.py
RAG/core/: compare.py  conftest.py  embedding.py  pinecone_checker.py
RAG/query/: query_engine_safe.py
RAG/tests/: conftest.py  test_compare.py  test_embedding.py  test_formatting.py  test_query_engine_safe.py  test_vector_utils.py
RAG/tools/: embedding_preview.py  manual_query_test.py  query_loop.py  query_test.py  upload_faq.py
adapters/: auth_state_adapter.py  line_adapter.py  openai_adapter.py  pinecone_adapter.py  user_role_adapter.py
config/: environment.py  line.py  log_config.py  mongodb.py  openai.py  pinecone.py  role_config.py
core/: compare.py  embedding.py  query_logic.py
core/auth/: password.py
data/: sop.JSON  sop.json
liff-auth/: index.html
line_bot/: flex_message.py  line_bot_main.py  main.py  models.py  mongodb_client.py  rich_menu.py
line_bot/config/: role_config.py
line_bot/db/: init_db.py  mongodb.py
line_bot/handlers/: message.py  (+2 more)
models/: formatting.py
scripts/: dev_runner.py
services/: auth_service.py  postback_service.py  query_service.py
(+33 files in other folders)
